--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Italy -- History'
 - !lcsh 'Renaissance -- Italy'
 - !lcc 'DG'
+- GITenberg
 title: "Renaissance in Italy, Volume 1 (of 7)\r\nThe Age of the Despots"
 url: http://www.gutenberg.org/ebooks/15400
